# The_main_Qt_modules

./: README.md
HW02/: CMakeLists.txt  main.cpp
